--- a/all-confs-short.bib
+++ b/all-confs-short.bib
@@ -627,6 +627,13 @@
   address = "Vancouver, BC",
 }
 
+@Proceedings{OSDI18,
+  booktitle = "OSDI '18",
+  month = oct,
+  year = "2018", 
+  address = "Carlsbad, CA",
+}
+
 
 @Proceedings{PASTE01,
   booktitle = "PASTE '01",
