--- a/all-confs.bib
+++ b/all-confs.bib
@@ -1027,6 +1027,13 @@
   address = "Vancouver, Canada",
 }
 
+@Proceedings{OSDI18,
+  booktitle = "Proceedings of the 13th Symposium on Operating Systems Design and Implementation (OSDI '10)",
+  month = oct,
+  year = "2018", 
+  address = "Carlsbad, California",
+}
+
 
 @Proceedings{PASTE01,
   booktitle = "ACM SIGPLAN-SIGSOFT Workshop on Program Analysis for Software Tools and Engineering (PASTE '01)",
