--- a/all.bib
+++ b/all.bib
@@ -33,8 +33,10 @@
    crossref = "ALLCAPITAL09",
 }
 
-@InProceedings{
-
+@InProceedings{Klimovic+18-Pocket,
+  title = "{Pocket: Elastic Ephemeral Storage for Serverless Analytics}",
+  author = "Ana Klimovic and Yawen Wang and Patrick Stuedi and Animesh Trivedi and Jonas Pfefferleand Christos Kozyrakis",
+  crossref = "OSDI18",
 }
 
 @InProceedings{SC91-SoftwareDefects,
