--- a/all-confs-short.bib
+++ b/all-confs-short.bib
@@ -634,6 +634,13 @@
   address = "Carlsbad, CA",
 }
 
+@Proceedings{OSDI20,
+  booktitle = "OSDI '20",
+  month = nov,
+  year = "2020", 
+  address = "Virtual",
+}
+
 
 @Proceedings{PASTE01,
   booktitle = "PASTE '01",
