--- a/all-confs.bib
+++ b/all-confs.bib
@@ -1028,10 +1028,17 @@
 }
 
 @Proceedings{OSDI18,
-  booktitle = "Proceedings of the 13th Symposium on Operating Systems Design and Implementation (OSDI '10)",
+  booktitle = "Proceedings of the 13th Symposium on Operating Systems Design and Implementation (OSDI '18)",
   month = oct,
   year = "2018", 
   address = "Carlsbad, California",
+}
+
+@Proceedings{OSDI20,
+  booktitle = "Proceedings of the 14th Symposium on Operating Systems Design and Implementation (OSDI '20)",
+  month = nov,
+  year = "2020", 
+  address = "Virtual",
 }
 
 
