--- a/all.bib
+++ b/all.bib
@@ -33,6 +33,13 @@
    crossref = "ALLCAPITAL09",
 }
 
+@InProceedings{Chang+20-SCFTL,
+  title = "{Determinizing Crash Behavior with a Verified Snapshot-Consistent Flash Translation Layer}",
+  author = "Yun-Sheng Chang and Yao Hsiao and Tzu-Chi Lin and Che-Wei Tsao and Chun-Feng Wu and Yuan-Hao Chang and Hsiang-Shang Ko and Yu-Fang Chen",
+  crossref = "OSDI20",
+}
+  
+
 @InProceedings{Klimovic+18-Pocket,
   title = "{Pocket: Elastic Ephemeral Storage for Serverless Analytics}",
   author = "Ana Klimovic and Yawen Wang and Patrick Stuedi and Animesh Trivedi and Jonas Pfefferleand Christos Kozyrakis",
