--- a/all.bib
+++ b/all.bib
@@ -33,12 +33,17 @@
    crossref = "ALLCAPITAL09",
 }
 
+@InProceedings{Ren+20-CrossFS,
+  title = "{CrossFS: A Cross-layered Direct-Access File System}",
+  author = "Yujie Ren and Changwoo Min and Sudarsun Kannan",
+  crossref = "OSDI20",
+}
+
 @InProceedings{Chang+20-SCFTL,
   title = "{Determinizing Crash Behavior with a Verified Snapshot-Consistent Flash Translation Layer}",
   author = "Yun-Sheng Chang and Yao Hsiao and Tzu-Chi Lin and Che-Wei Tsao and Chun-Feng Wu and Yuan-Hao Chang and Hsiang-Shang Ko and Yu-Fang Chen",
   crossref = "OSDI20",
 }
-  
 
 @InProceedings{Klimovic+18-Pocket,
   title = "{Pocket: Elastic Ephemeral Storage for Serverless Analytics}",
